--- a/_config.yml
+++ b/_config.yml
@@ -143,13 +143,13 @@ comments:
 ## => Pageview
 ##############################
 pageview:
-  provider: false # false (default), "leancloud", "custom"
+  provider: leancloud # false (default), "leancloud", "custom"
 
   ## Leancloud
   leancloud:
-    app_id    : # LeanCloud App id
-    app_key   : # LeanCloud App key
-    app_class : # LeanCloud App class
+    app_id    : gjEczTwVpsw1JUkCB32mo6ME-gzGzoHsz # LeanCloud App id
+    app_key   : mWp2a6ya5p8qcnDNcFiMuVwi # LeanCloud App key
+    app_class : GithubPage # LeanCloud App class
 
 
 ## => Analytics
