--- a/_config.yml
+++ b/_config.yml
@@ -105,11 +105,11 @@ sources: # bootcdn (default), unpkg
 ## => Sharing
 ##############################
 sharing:
-  provider: false # false (default), "addtoany", "addthis", "custom"
+  provider: addthis # false (default), "addtoany", "addthis", "custom"
 
   ## AddThis
   addthis:
-    id: # AddThis pubid, e.g. ra-5xxxxxxxxxxx
+    id: ra-5e2677a83434490e # AddThis pubid, e.g. ra-5xxxxxxxxxxx
 
 
 ## => Comments
