--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ theme: jekyll-text-theme
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : https://alainhsu.xyz # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : Alain Hsu's Homepage 🏠
 description: > # this means to ignore newlines until "Language & timezone"
